# python-sandbox

httpx-sample/: pyproject.toml
httpx-sample/httpx_sample/: main.py
kms/: .gitignore  encrypt_decrypt.py  envelope_encryption.py
lambda-web-adapter/: compose.yaml  pyproject.toml
lambda-web-adapter/cdk/lib/: cdk-stack.ts
lambda-web-adapter/cdk/test/: cdk.test.ts
lambda-web-adapter/src/: Dockerfile  main.py  test_main.py
