[tool.poetry]
name = "httpx-sample"
version = "0.1.0"
description = ""
authors = ["enokawa <enokawa00@gmail.com>"]
readme = "README.md"
packages = [{include = "httpx_sample"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
